# argocd-app-migrator

./: .env.example  .flake8  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  QUICKSTART.md  README.md  TODO.md  argocd-app-migrator  argocd-app-migrator_1  commit_to_github.sh  migrate.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
examples/: applications.json  git-applicationset.yaml  scm-applicationset.yaml
io-artifact-examples/applicationset-generator-config/: config.json
io-artifact-examples/argocd-application-sets/: example-appset.yaml
io-artifact-examples/argocd-applications/: app-1.yaml  app-2.yaml
src/argocd_app_migrator/: __init__.py  __main__.py  cli.py  parser.py  scanner.py  version.py
tests/: __init__.py  conftest.py  test_cli.py  test_parser.py  test_scanner.py
